tests/smt2/error/arg_let_mismatch.smt2
(declare-fun f (Bool) Bool)
(assert (let ((f true)) (f f)))